# zone-aware-reproj-cpp

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  example.json  main.cpp
.github/workflows/: CMake.yaml
include/: API.hpp  GeoTIFFReader.hpp  JsonReader.hpp  Point.hpp  PointSource.hpp  ProjectionEngine.hpp  ProjectionManager.hpp  ProjectionParameters.hpp  RandomPointGenerator.hpp
src/: GeoTIFFReader.cpp  Point.cpp  ProjectionEngine.cpp  ProjectionManager.cpp  RandomPointGenerator.cpp
